<resources>
    <string name="app_name">Run it</string>
    <string name="parametre_txt">Paramètres</string>
    <string name="trajet_txt">Trajets</string>
    <string name="recompense_txt">Récompenses</string>
    <string name="partage_txt">Partager</string>
    <string name="go_button">GO</string>
    <string name="Equipe">Mon Equipe</string>
    <string name="Connexion">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="Activite">Activité</string>
    <string name="Rejoindre">Rejoindre une Equipe</string>
    <string name="Creer">Créer une Equipe</string>
    <string name="Utilisateur1_txt">Utilisateur 1</string>
    <string name="Utilisateur2_txt">Utilisateur 2</string>
    <string name="Utilisateur3_txt">Utilisateur 3</string>
    <string name="Utilisateur4_txt">Utilisateur 4</string>
    <string name="HeureConnexion_txt1">dernière connexion - heure</string>
    <string name="HeureConnexion_txt2">dernière connexion - heure</string>
    <string name="HeureConnexion_txt3">dernière connexion - heure</string>
    <string name="HeureConnexion_txt4">dernière connexion - heure</string>
    <string name="Equipe1_txt">LesCoureurs</string>
    <string name="Equipe2_txt">DSport</string>
    <string name="Equipe3_txt">CheminDuRoi</string>
    <string name="Equipe4_txt">LeBlueWall</string>
    <string name="NomEquipe_txt">Nom de l équipe :</string>
    <string name="EntreeEquipe_txt">Entrez le nom de l équipe</string>
    <string name="CreationEquipe_txt">Création de l équipe</string>
    <string name="QuitterEquipe_txt">Quitter l équipe</string>
    <string name="Connexion_txt1">Connexion</string>
    <string name="Rejoindre_txt1">Rejoins ton Equipe</string>
    <string name="Rejoindre_txt2">Rejoins l Equipe</string>
    <string name="EntreeDesciption_txt">Entrez la description</string>
    <string name="DesciptionEquipe_txt">Description de l équipe:</string>
    <string name="creer_txt1">Crée ton Equipe</string>
    <string name="creer_txt2">Crée l Equipe</string>
    <string name="info_imageButton_description">Description pour le bouton du trajet</string>
    <string name="info_imageButton_description2">Description pour le bouton de la récompense</string>
    <string name="info_imageButton_description3">Description pour le bouton paramètre</string>
    <string name="info_imageButton_description4">Description pour le bouton partagé</string>
    <string name="info_imageButton_description5">Description pour le bouton permettant accéder au profil</string>
    <string name="info_imageButton_description6">Description pour le bouton permettant accéder aux informations de léquipe</string>
    <string name="info_imageButton_description7">Description pour le bouton des messages privés</string>
    <string name="info_imageButton_description9">Description pour le bouton des messages équipe</string>
    <string name="info_imageButton_description8">Description pour le bouton permettant déditer</string>
    <string name="stop">STOP</string>

    <string name="Activite_cours">Activité en cours</string>
    <string name="VitesseM">Vitesse Moyenne (km/h)</string>
    <string name="DistanceKm">Distance (km)</string>
    <string name="DistanceMoyenneChiffre">11.98</string>
    <string name="DistanceKmChiffre">2.51</string>
    <string name="Duree">Durée (HH:MM:SS)</string>
    <string name="Temps">00:00:00</string>
    <string name="TempsFinal">00:12:34</string>
    <string name="EndActivite">Activité terminé</string>
    <string name="SaveActivite">Sauvegarde de l activité</string>
    <string name="NomActivite">Nom de l activité :</string>
    <string name="EntreeNomActivite">Entrez le nom de l activité</string>
    <string name="CommentaireNomActivite">Commentaire de l activité :</string>
    <string name="EntreeCommentaire">Entrez un commentaire</string>
    <string name="save">SAVE</string>
    <string name="activiteStop">Activité stoppée</string>
    <string name="activiteReprise">REPRISE</string>
    <string name="activiteFin">FIN</string>
    <string name="info_imageButton_trajet">Description pour le bouton du trajet</string>
    <string name="info_imageButton_recompense">Description pour le bouton de la récompense</string>
    <string name="info_imageButton_paramètre">Description pour le bouton paramètre</string>
    <string name="info_imageButton_partage">Description pour le bouton partagé</string>
    <string name="info_imageButton_profil">Description pour le bouton permettant accéder au profil</string>


</resources>